# cmake

./: CMakeLists.txt  MyTest.h  hello.cpp  hello.h  main.cpp
src/: MyTest.cpp  main.cpp  test.cpp  test.h
